# QtAndroidViewShare

./: CMakeLists.txt  Main.qml  README.md  ResourceCreator.cpp  ResourceCreator.h  ResourceCreator.qml  ResourceCreatorCpp.cpp  ResourceCreatorCpp.h  main.cpp  resourceExample.qrc
Core/: ShareUtils.qml
Core/shareutils/: PlatformShareUtils.cpp  PlatformShareUtils.h  ShareUtilsCpp.cpp  ShareUtilsCpp.h
android/: AndroidManifest.xml  build.gradle  gradle.properties
android/src/org/shareluma/activity/: QShareActivity.java
android/src/org/shareluma/utils/: QShareUtils.java
